feat: Add SecurityConfig